feat: create clickhouse-service and environment-specific connections
- Add separate .env.staging and .env.production files for environment-specific settings
- Update config/env.py to load the appropriate .env file based on DJANGO_ENVIRONMENT
- Add PowerShell function for switching between environments
- Update documentation in README.md and docs/commands.md
- Prepare foundation for cross_dock app's ClickHouse service to connect to the appropriate database

This change enables seamless switching between staging and production environments,
ensuring the ClickHouse service connects to the correct database based on the
current environment setting.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
-SECRET_KEY=secret
+# Django settings
+DJANGO_SECRET_KEY=your-secret-key-here
+DJANGO_DEBUG=True
+DJANGO_ENVIRONMENT=staging
+
+# ClickHouse settings
+CLICKHOUSE_HOST=appropriate_ip_for_environment
+CLICKHOUSE_USER=appropriate_user_for_environment
+CLICKHOUSE_PASSWORD=appropriate_password_for_environment
+
+# Other settings
+ALLOWED_HOSTS=localhost,127.0.0.1
