--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
+    "clickhouse-driver>=0.2.9",
     "django>=5.2",
     "django-allauth>=65.7.0",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
     "django-htmx>=1.23.0",
     "django-widget-tweaks>=1.5.0",
+    "pandas>=2.2.3",
     "pillow>=11.2.1",
 ]
 
