--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "django-environ>=0.12.0",
     "django-htmx>=1.23.0",
     "django-widget-tweaks>=1.5.0",
+    "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
 ]
@@ -23,7 +24,10 @@ package = false
 dev = [
     "django-debug-toolbar>=5.2.0",
     "django-extensions>=4.1",
+    "factory-boy>=3.3.3",
+    "faker>=37.1.0",
     "pytest>=8.3.5",
+    "pytest-django>=4.11.1",
     "ruff>=0.11.8",
     "werkzeug>=3.1.3",
 ]
