--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
     "django-htmx>=1.23.0",
+    "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
