feat(cross_dock): implement Celery/Redis for asynchronous task processing
- Add Celery and Redis for background task processing
- Create BaseModel with created_at and updated_at fields
- Add TaskComment model for task comments and notes
- Configure Celery in config/third_party_config/celery.py
- Implement process_file_task for asynchronous file processing
- Update process_file view to use Celery tasks
- Add task_detail view and template for viewing task details
- Add task_list view with status indicators and auto-refresh
- Implement conditional UI elements (Download/Details buttons)
- Add tests for Celery tasks and updated views
- Update documentation with implementation details

This implementation improves user experience by processing large files
asynchronously, provides better task tracking and history, and increases
system reliability by properly handling task failures and retries.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
+    "celery>=5.5.2",
     "clickhouse-driver>=0.2.9",
     "django>=5.2",
     "django-allauth>=65.7.0",
+    "django-celery-results>=2.6.0",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
     "django-htmx>=1.23.0",
@@ -16,6 +18,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
+    "redis>=6.1.0",
 ]
 
 [tool.uv]
