--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,18 @@ CLICKHOUSE_HOST=appropriate_ip_for_environment
 CLICKHOUSE_USER=appropriate_user_for_environment
 CLICKHOUSE_PASSWORD=appropriate_password_for_environment
 
+# Redis/Celery settings
+# For local Redis installation
+# CELERY_BROKER_URL=redis://localhost:6379/0
+# CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# For Docker Redis (when running Django outside Docker)
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# For Docker Redis (when running Django inside Docker)
+# CELERY_BROKER_URL=redis://redis:6379/0
+# CELERY_RESULT_BACKEND=redis://redis:6379/0
+
 # Other settings
 ALLOWED_HOSTS=localhost,127.0.0.1
