--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "faker>=37.1.0",
     "pytest>=8.3.5",
     "pytest-django>=4.11.1",
+    "pytest-xdist>=3.6.1",
     "ruff>=0.11.8",
     "werkzeug>=3.1.3",
 ]
