--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "django-htmx>=1.23.0",
     "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
+    "eventlet>=0.40.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
