feat(docker): Implement comprehensive Docker containerization
Introduce Docker setup for both staging and production environments to improve consistency, reliability, and ease of deployment.

Key changes include:
- Create multi-stage Dockerfile for building optimized images with `uv`.
- Define `docker-compose.staging.yml` for local development with volume mounts, hot reload, and SQLite.
- Define `docker-compose.production.yml` for production deployment using PostgreSQL and Gunicorn.
- Add Nginx reverse proxy configurations with templating for dynamic port assignments.
- Configure static file collection (`collectstatic`) within the Docker build process, addressing `STATIC_ROOT` and `STATICFILES_DIRS` conflicts.
- Implement Docker Compose health checks for Redis and PostgreSQL services to ensure dependencies are ready before starting application containers.
- Configure service startup order using `depends_on: condition: service_healthy`.
- Standardize internal Redis container port to 6379 and update related service configurations (including advising on `.env` file updates).
- Add documentation for Docker build, run, and execution commands to `docs/commands.md`.

This setup provides isolated, reproducible environments for development and a solid foundation for production deployment.

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ CLICKHOUSE_PASSWORD=appropriate_password_for_environment
 # CELERY_RESULT_BACKEND=redis://localhost:6378/0
 
 # For Docker Redis (when running Django outside Docker)
-CELERY_BROKER_URL=redis://localhost:6378/0
-CELERY_RESULT_BACKEND=redis://localhost:6378/0
+CELERY_BROKER_URL=redis://127.0.0.1:6378/0
+CELERY_RESULT_BACKEND=redis://127.0.0.1:6378/0
 
 # For Docker Redis (when running Django inside Docker)
 # CELERY_BROKER_URL=redis://redis:6378/0
