--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,21 @@ dependencies = [
     "clickhouse-driver>=0.2.9",
     "django>=5.2",
     "django-allauth>=65.7.0",
+    "django-celery-beat>=2.8.1",
     "django-celery-results>=2.6.0",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
+    "django-extensions>=4.1",
     "django-htmx>=1.23.0",
     "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
     "eventlet>=0.40.0",
+    "gevent>=25.5.1",
+    "gunicorn>=23.0.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
+    "psycopg[binary,pool]>=3.2.9",
     "redis>=6.1.0",
 ]
 
@@ -28,7 +33,6 @@ package = false
 [dependency-groups]
 dev = [
     "django-debug-toolbar>=5.2.0",
-    "django-extensions>=4.1",
     "factory-boy>=3.3.3",
     "faker>=37.1.0",
     "pre-commit>=4.2.0",
