--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "django-extensions>=4.1",
     "factory-boy>=3.3.3",
     "faker>=37.1.0",
+    "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-django>=4.11.1",
     "pytest-xdist>=3.6.1",
