--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ dependencies = [
     "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
     "eventlet>=0.40.0",
+    "gunicorn>=23.0.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
+    "psycopg[binary,pool]>=3.2.9",
     "redis>=6.1.0",
 ]
 
@@ -27,7 +29,6 @@ package = false
 
 [dependency-groups]
 dev = [
-    "django-debug-toolbar>=5.2.0",
     "django-extensions>=4.1",
     "factory-boy>=3.3.3",
     "faker>=37.1.0",
