test(config): configure dedicated settings for testing
   Introduces a dedicated `config/django_config/test.py` settings file to create an isolated and predictable environment
     for the test suite.

   Previously, tests relied on the base configuration, which is not ideal. This change configures `pytest` to use the
     new test-specific settings, which utilize an in-memory SQLite database. This ensures tests are faster, more reliable,
     and completely independent of development or production environments.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.django_config.base
+DJANGO_SETTINGS_MODULE = config.django_config.test
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
