--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ dependencies = [
     "django-celery-results>=2.6.0",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
+    "django-filter>=25.1",
     "django-htmx>=1.23.0",
     "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
+    "djangorestframework>=3.16.0",
     "eventlet>=0.40.0",
     "gunicorn>=23.0.0",
+    "markdown>=3.8.2",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
