--- a/requirements.txt
+++ b/requirements.txt
@@ -34,8 +34,10 @@ django==5.2.3
     #   admin2 (pyproject.toml)
     #   django-allauth
     #   django-celery-results
+    #   django-filter
     #   django-htmx
     #   django-template-partials
+    #   djangorestframework
 django-allauth==65.9.0
     # via admin2 (pyproject.toml)
 django-celery-results==2.6.0
@@ -44,11 +46,15 @@ django-cleanup==9.0.0
     # via admin2 (pyproject.toml)
 django-environ==0.12.0
     # via admin2 (pyproject.toml)
+django-filter==25.1
+    # via admin2 (pyproject.toml)
 django-htmx==1.23.0
     # via admin2 (pyproject.toml)
 django-template-partials==24.4
     # via admin2 (pyproject.toml)
 django-widget-tweaks==1.5.0
+    # via admin2 (pyproject.toml)
+djangorestframework==3.16.0
     # via admin2 (pyproject.toml)
 dnspython==2.7.0
     # via eventlet
@@ -62,6 +68,8 @@ gunicorn==23.0.0
     # via admin2 (pyproject.toml)
 kombu==5.5.4
     # via celery
+markdown==3.8.2
+    # via admin2 (pyproject.toml)
 numpy==2.3.0
     # via pandas
 openpyxl==3.1.5
