--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,29 @@
 # Django settings
-DJANGO_SECRET_KEY=your-secret-key-here
-DJANGO_DEBUG=True
-DJANGO_ENVIRONMENT=staging
+DJANGO_SECRET_KEY=super-secret-key
+DJANGO_DEBUG=False
+DJANGO_ENVIRONMENT=production/staging
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,87.242.110.159
+DJANGO_CSRF_TRUSTED_ORIGINS=http://127.0.0.1:8061,http://localhost:8061,http://87.242.110.159:8061
+DJANGO_SETTINGS_MODULE=config.django_config.production  # production/staging
+
+# PostgreSQL settings
+POSTGRES_ENGINE=postgresql_psycopg2
+POSTGRES_DB=admin2_db
+POSTGRES_USER=someuser
+POSTGRES_PASSWORD=somepassword
+POSTGRES_HOST=db  # or 127.0.0.1
+POSTGRES_PORT=5432
+
 
 # ClickHouse settings
-CLICKHOUSE_HOST=appropriate_ip_for_environment
-CLICKHOUSE_USER=appropriate_user_for_environment
-CLICKHOUSE_PASSWORD=appropriate_password_for_environment
+CLICKHOUSE_HOST=87.242.110.159
+CLICKHOUSE_USER=someuser
+CLICKHOUSE_PASSWORD=somepassword
 
-# Redis/Celery settings
-# For local Redis installation
-# CELERY_BROKER_URL=redis://localhost:6378/0
-# CELERY_RESULT_BACKEND=redis://localhost:6378/0
-
-# For Docker Redis (when running Django outside Docker)
-CELERY_BROKER_URL=redis://localhost:6378/0
-CELERY_RESULT_BACKEND=redis://localhost:6378/0
-
-# For Docker Redis (when running Django inside Docker)
-# CELERY_BROKER_URL=redis://redis:6378/0
-# CELERY_RESULT_BACKEND=redis://redis:6378/0
+# Redis settings
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 # Other settings
-ALLOWED_HOSTS=localhost,127.0.0.1
+ALLOWED_HOSTS=localhost,127.0.0.1,87.242.110.159
+EXTERNAL_DJANGO_ADMIN_URL=http://87.249.37.86
