feat: add download failed file ability

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ CELERY_RESULT_BACKEND=redis://redis:6379/0
 # Other settings
 ALLOWED_HOSTS=localhost,127.0.0.1,87.242.110.159
 EXTERNAL_DJANGO_ADMIN_URL=http://87.249.37.86
+PRICELENS_FILE_SERVER_URL=http://87.242.110.159
