--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,11 @@ http {
            alias /media/;
        }
 
+       location /failed_files/ {
+           alias /var/www/failed_files/;
+           autoindex off;
+       }
+
        # Handles all other requests
        location / {
            # Forward requests to Django application
