feat(pricelens): Implement Celery tasks for automated data processing
This commit introduces Celery tasks to fully automate the Pricelens data pipeline, replacing the need for manual execution of management commands.

The following changes are included:
- A new `pricelens/tasks.py` module is created with three core tasks:
  - `backfill_suppliers_task`: Periodically syncs supplier data from ClickHouse.
  - `refresh_cadence_profiles_task`: Runs daily analysis to calculate supplier cadence buckets.
  - `backfill_investigations_task`: Acts as a daily safety net to import any missed error events.
- The Celery Beat schedule is configured in `config/third_party_config/celery.py` to run these tasks automatically.
- The `docker-compose.yml` file is updated to include a new `celery-beat` service, which runs the scheduler as a separate process.
- The original management commands have been updated with docstrings to clarify their new role as tools for manual intervention and debugging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,20 @@ services:
       redis:
         condition: service_healthy
 
+  celery-beat:
+    build: .
+    command: celery -A config.third_party_config.celery beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    env_file:
+      - .env.prod
+    volumes:
+      - admin2_static_data:/app/staticfiles
+      - admin2_media_data:/app/media
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
   redis:
     image: redis:alpine
     ports:
