--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "clickhouse-driver>=0.2.9",
     "django>=5.2",
     "django-allauth>=65.7.0",
+    "django-celery-beat>=2.8.1",
     "django-celery-results>=2.6.0",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
