feat(emex_upload): add emex_upload app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,24 @@ requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
     "celery>=5.5.2",
-    "clickhouse-driver>=0.2.9",
+    "clickhouse-connect>=0.9.2",
+    "clickhouse-driver[numpy]>=0.2.9",
     "django>=5.2",
     "django-allauth>=65.7.0",
     "django-celery-beat>=2.8.1",
-    "django-celery-results>=2.6.0",
+    "django-celery-results",
     "django-cleanup>=9.0.0",
     "django-environ>=0.12.0",
-    "django-filter>=25.1",
+    "django-filter",
     "django-htmx>=1.23.0",
     "django-template-partials>=24.4",
     "django-widget-tweaks>=1.5.0",
     "djangorestframework>=3.16.0",
     "eventlet>=0.40.0",
     "gunicorn>=23.0.0",
+    "loguru>=0.7.3",
     "markdown>=3.8.2",
+    "numpy>=2.2.5",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pillow>=11.2.1",
