--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ events {
 }
 
 http {
+   client_max_body_size 1G;
    server {
        include mime.types;
        default_type application/octet-stream;
@@ -25,6 +26,30 @@ http {
        location /failed_files/ {
            alias /var/www/failed_files/;
            autoindex off;
+       }
+
+       location /emex-upload/task-status/ {
+           proxy_pass http://admin2-web:8000;
+
+           proxy_http_version 1.1;
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
+
+           # SSE essentials
+           proxy_buffering off;
+           proxy_cache off;
+           proxy_set_header Connection "";
+           proxy_set_header Accept-Encoding "";
+           gzip off;
+
+           # Long-lived connection
+           proxy_read_timeout 1h;
+           proxy_send_timeout 1h;
+
+           add_header X-Accel-Buffering no;
+           add_header Cache-Control "no-cache";
        }
 
        # Handles all other requests
