--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ celery==5.5.3
     #   admin2 (pyproject.toml)
     #   django-celery-beat
     #   django-celery-results
+certifi==2025.8.3
+    # via clickhouse-connect
 click==8.2.1
     # via
     #   celery
@@ -26,10 +28,14 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.3.0
     # via celery
+clickhouse-connect==0.9.2
+    # via admin2 (pyproject.toml)
 clickhouse-driver==0.2.9
     # via admin2 (pyproject.toml)
 colorama==0.4.6
-    # via click
+    # via
+    #   click
+    #   loguru
 cron-descriptor==1.4.5
     # via django-celery-beat
 django==5.2.3
@@ -77,10 +83,17 @@ gunicorn==23.0.0
     # via admin2 (pyproject.toml)
 kombu==5.5.4
     # via celery
+loguru==0.7.3
+    # via admin2 (pyproject.toml)
+lz4==4.4.4
+    # via clickhouse-connect
 markdown==3.8.2
     # via admin2 (pyproject.toml)
 numpy==2.3.0
-    # via pandas
+    # via
+    #   admin2 (pyproject.toml)
+    #   clickhouse-driver
+    #   pandas
 openpyxl==3.1.5
     # via admin2 (pyproject.toml)
 packaging==25.0
@@ -88,7 +101,9 @@ packaging==25.0
     #   gunicorn
     #   kombu
 pandas==2.3.0
-    # via admin2 (pyproject.toml)
+    # via
+    #   admin2 (pyproject.toml)
+    #   clickhouse-driver
 pillow==11.2.1
     # via admin2 (pyproject.toml)
 prompt-toolkit==3.0.51
@@ -107,6 +122,7 @@ python-dateutil==2.9.0.post0
     #   pandas
 pytz==2025.2
     # via
+    #   clickhouse-connect
     #   clickhouse-driver
     #   pandas
 redis==6.2.0
@@ -129,6 +145,8 @@ tzdata==2025.2
     #   tzlocal
 tzlocal==5.3.1
     # via clickhouse-driver
+urllib3==2.5.0
+    # via clickhouse-connect
 vine==5.1.0
     # via
     #   amqp
@@ -136,3 +154,7 @@ vine==5.1.0
     #   kombu
 wcwidth==0.2.13
     # via prompt-toolkit
+win32-setctime==1.2.0
+    # via loguru
+zstandard==0.25.0
+    # via clickhouse-connect
