--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,30 @@
 #    uv pip compile pyproject.toml --output-file requirements.txt
 amqp==5.3.1
     # via kombu
+annotated-types==0.7.0
+    # via pydantic
+anyio==4.11.0
+    # via httpx
 asgiref==3.8.1
     # via
     #   django
     #   django-allauth
     #   django-htmx
+asyncpg==0.30.0
+    # via admin2 (pyproject.toml)
 billiard==4.2.1
     # via celery
-celery==5.5.3
+celery==5.5.2
     # via
     #   admin2 (pyproject.toml)
     #   django-celery-beat
     #   django-celery-results
 certifi==2025.8.3
-    # via clickhouse-connect
-click==8.2.1
+    # via
+    #   clickhouse-connect
+    #   httpcore
+    #   httpx
+click==8.2.0
     # via
     #   celery
     #   click-didyoumean
@@ -38,7 +47,7 @@ colorama==0.4.6
     #   loguru
 cron-descriptor==1.4.5
     # via django-celery-beat
-django==5.2.3
+django==5.2
     # via
     #   admin2 (pyproject.toml)
     #   django-allauth
@@ -49,7 +58,7 @@ django==5.2.3
     #   django-template-partials
     #   django-timezone-field
     #   djangorestframework
-django-allauth==65.9.0
+django-allauth==65.7.0
     # via admin2 (pyproject.toml)
 django-celery-beat==2.8.1
     # via admin2 (pyproject.toml)
@@ -77,11 +86,27 @@ et-xmlfile==2.0.0
     # via openpyxl
 eventlet==0.40.0
     # via admin2 (pyproject.toml)
-greenlet==3.2.3
+greenlet==3.2.2
     # via eventlet
 gunicorn==23.0.0
     # via admin2 (pyproject.toml)
-kombu==5.5.4
+h11==0.16.0
+    # via httpcore
+h2==4.3.0
+    # via httpx
+hpack==4.1.0
+    # via h2
+httpcore==1.0.9
+    # via httpx
+httpx==0.28.1
+    # via admin2 (pyproject.toml)
+hyperframe==6.1.0
+    # via h2
+idna==3.10
+    # via
+    #   anyio
+    #   httpx
+kombu==5.5.3
     # via celery
 loguru==0.7.3
     # via admin2 (pyproject.toml)
@@ -89,7 +114,7 @@ lz4==4.4.4
     # via clickhouse-connect
 markdown==3.8.2
     # via admin2 (pyproject.toml)
-numpy==2.3.0
+numpy==2.2.5
     # via
     #   admin2 (pyproject.toml)
     #   clickhouse-driver
@@ -97,10 +122,8 @@ numpy==2.3.0
 openpyxl==3.1.5
     # via admin2 (pyproject.toml)
 packaging==25.0
-    # via
-    #   gunicorn
-    #   kombu
-pandas==2.3.0
+    # via gunicorn
+pandas==2.2.3
     # via
     #   admin2 (pyproject.toml)
     #   clickhouse-driver
@@ -114,6 +137,10 @@ psycopg-binary==3.2.9
     # via psycopg
 psycopg-pool==3.2.6
     # via psycopg
+pydantic==2.12.0
+    # via admin2 (pyproject.toml)
+pydantic-core==2.41.1
+    # via pydantic
 python-crontab==3.3.0
     # via django-celery-beat
 python-dateutil==2.9.0.post0
@@ -125,16 +152,26 @@ pytz==2025.2
     #   clickhouse-connect
     #   clickhouse-driver
     #   pandas
-redis==6.2.0
+redis==6.1.0
+    # via admin2 (pyproject.toml)
+selectolax==0.4.0
     # via admin2 (pyproject.toml)
 six==1.17.0
     # via python-dateutil
+sniffio==1.3.1
+    # via anyio
 sqlparse==0.5.3
     # via django
-typing-extensions==4.14.0
+typing-extensions==4.15.0
     # via
+    #   anyio
     #   psycopg
     #   psycopg-pool
+    #   pydantic
+    #   pydantic-core
+    #   typing-inspection
+typing-inspection==0.4.2
+    # via pydantic
 tzdata==2025.2
     # via
     #   django
@@ -156,5 +193,7 @@ wcwidth==0.2.13
     # via prompt-toolkit
 win32-setctime==1.2.0
     # via loguru
+xlsxwriter==3.2.9
+    # via admin2 (pyproject.toml)
 zstandard==0.25.0
     # via clickhouse-connect
