--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "selectolax>=0.4.0",
     "xlsxwriter>=3.2.9",
     "asyncpg>=0.30.0",
+    "tqdm>=4.67.1",
+    "playwright>=1.55.0",
 ]
 
 [tool.uv]
