--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ colorama==0.4.6
     # via
     #   click
     #   loguru
+    #   tqdm
 cron-descriptor==1.4.5
     # via django-celery-beat
 django==5.2
@@ -162,6 +163,8 @@ sniffio==1.3.1
     # via anyio
 sqlparse==0.5.3
     # via django
+tqdm==4.67.1
+    # via admin2 (pyproject.toml)
 typing-extensions==4.15.0
     # via
     #   anyio
